# ValveResourceFormat

./: .gitmodules  ValveResourceFormat.sln
.github/workflows/: build.yml
Decompiler/: Decompiler.cs  Decompiler.csproj
GUI/: GUI.csproj  MainForm.cs
GUI/Controls/: GLViewerControl.cs
GUI/Forms/: Texture.cs
GUI/Profiler/: Profiler.cs  ProfilerZone.cs  TracyColor.cs  readme.txt
GUI/Types/ParticleRenderer/: script.py
GUI/Types/Renderer/: DrawCall.cs  FlexStateManager.cs  GLDebugGroup.cs  GLSceneViewer.cs  MaterialLoader.cs  MeshBatchRenderer.cs  MorphComposite.cs  Octree.cs  RenderMaterial.cs  RenderTexture.cs  Scene.cs  SceneLight.cs  SceneNode.cs  SceneSky.cs  SelectedNodeRenderer.cs  Shader.cs  ShaderLoader.cs  WorldLightingInfo.cs  WorldLoader.cs
GUI/Types/Viewers/: CompiledShader.cs  Demo.cs  IViewer.cs  Resource.cs
GUI/Utils/SpirvReflector/: .gitignore  CMakeLists.txt  NativeInterop.cs  SpirvReflector.cpp  SpirvReflector.h
Tests/: MapExtractTest.cs
Tests/Files/KeyValues/: testsave_binarykv3.sav
ValveResourceFormat/: ValveResourceFormat.csproj
ValveResourceFormat/CompiledShader/: ShaderDataBlocks.cs  ZFrameDataBlocks.cs  ZFrameFile.cs
ValveResourceFormat/IO/: FileExtract.cs  GltfModelExporter.cs  HammerMeshBuilder.cs  MapExtract.cs  ModelExtract.cs  ShaderExtract.cs  TextureExtract.cs
ValveResourceFormat/IO/ContentFormats/: ValveMap.cs
ValveResourceFormat/Resource/Blocks/: ResourceEditInfo.cs  ResourceEditInfo2.cs  VBIB.cs
ValveResourceFormat/Resource/ResourceTypes/: BinaryKV3.cs  (+2 more)
ValveResourceFormat/Utils/: EntityTransformHelper.cs
(+35 files in other folders)
